# python-project-50

./: .coverage  README.md  coverage.xml  pyproject.toml
.github/workflows/: gendiff-check.yml
gendiff/scripts/: formatter.py  gendiff.py  parser.py
tests/: gendiff_test.py
tests/fixtures/: file1.yaml  file2.yaml
